--- a/src/App.css
+++ b/src/App.css
@@ -107,3 +107,14 @@ input[type="text"]{
  .copy-btn:hover {
   background-color: #00b359;
 }
+
+button:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
